# ReelRecommend

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/apis/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apis/management/commands/: manage_recommendations.py  populate_movies.py
backend/apis/migrations/: 0001_initial.py  0002_movie_adult.py
backend/apis/recommendation_engine/: data_fetcher.py  recommender_system.py  services.py
backend/backend/: settings.py  urls.py
backend/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: Dockerfile  index.html  tailwind.config.ts  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DragScrollWrapper.tsx  HeroCarousel.tsx  MovieCard.tsx  MovieCardSkeleton.tsx  MovieCarousel.tsx  Navigation.tsx  VideoPlayer.tsx
frontend/src/data/: constants.ts  constants.tsx  movies.ts
frontend/src/pages/: Home.tsx  LogIn.tsx  MovieDetails.tsx  SignUp.tsx
